# clew

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
clewTest/: CMakeLists.txt  clewTest.cpp  clewTest.vcxproj  clewTest.vcxproj.filters  clewTestC.c
include/: CMakeLists.txt  clew.h
include/proxy-opencl/OpenCL/: cl.h
src/: CMakeLists.txt  clew.c  clew.sln  clew.vcxproj  clew.vcxproj.filters
